<!--
    Copyright (C) 2014 Arpit Khurana <arpitkh96@gmail.com>, Vishal Nehra <vishalmeham2@gmail.com>

    This file is part of Amaze File Manager.

    Amaze File Manager is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
    -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/ui">
        <Preference
            android:key="theme"
            android:title="@string/theme" />
        <Preference
            android:title="@string/color_title"
            android:key="colors"
            android:summary="@string/color_summary"/>

        <com.amaze.filemanager.ui.views.CheckBx
            android:key="circularimages"
            android:defaultValue="true"
            android:summary="@string/circularimages"
            android:title="@string/circularicons"/>
        <com.amaze.filemanager.ui.views.CheckBx
            android:key="plus_pic"
            android:title="@string/gplus_pic_title"
            android:summary="@string/gplus_pic_summary"
            android:defaultValue="false"
            android:enabled="true"/>
        <com.amaze.filemanager.ui.views.CheckBx
            android:defaultValue="true"
            android:key="showDividers"
            android:title="@string/showDividers" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/general">
        <com.amaze.filemanager.ui.views.CheckBx
            android:defaultValue="true"
            android:key="savepaths"
            android:summary="@string/savepathsummary"
            android:title="@string/savepaths" />
        <com.amaze.filemanager.ui.views.CheckBx
            android:defaultValue="true"
            android:key="showThumbs"
            android:summary="@string/thumbSummary"
            android:title="@string/thumb" />
		<com.amaze.filemanager.ui.views.CheckBx
            android:defaultValue="false"
            android:key="showHidden"
            android:title="@string/hidden" />
        <com.amaze.filemanager.ui.views.CheckBx
            android:defaultValue="true"
            android:key="showLastModified"
            android:enabled="false"
            android:summary="@string/lastModifiedSummary"
            android:title="@string/lastModifiedPref" />
        <com.amaze.filemanager.ui.views.CheckBx
            android:defaultValue="false"
            android:key="showFileSize"
            android:summary="@string/sizePrefSummary"
            android:title="@string/sizePref" />
        <com.amaze.filemanager.ui.views.CheckBx
            android:defaultValue="false"
            android:key="goBack_checkbox"
            android:title="@string/back_title"
            android:summary="@string/back_summary" />
        <Preference
            android:key="columns"
            android:title="@string/gridcolumnno" />

    
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/archive_preferences">
        <EditTextPreference
            android:key="extractpath"
            android:title="@string/archive_extract_folder"
            android:summary="@string/archive_summary">
        </EditTextPreference>
        <EditTextPreference
            android:key="zippath"
            android:summary="@string/zip_summary"
            android:title="@string/zip_create_folder">
        </EditTextPreference>
</PreferenceCategory>
    <PreferenceCategory android:title="@string/miscellaneous">

        <PreferenceScreen
            android:title="@string/advanced_search"
            >
            <com.amaze.filemanager.ui.views.CheckBx
                android:key="regex"
                android:title="@string/regular_expression"
                android:summary="@string/regular_expression_summary"
                />
            <com.amaze.filemanager.ui.views.CheckBx
                android:key="matches"
                android:title="@string/match_content"
                android:summary="@string/match_content_summary"
                />
        </PreferenceScreen>

        <com.amaze.filemanager.ui.views.CheckBx
            android:defaultValue="false"
            android:key="showPermissions"
            android:summary="@string/rootPrefSummary"
            android:title="@string/rootPref" />
        <com.amaze.filemanager.ui.views.CheckBx
            android:defaultValue="false"
            android:key="rootmode"
            android:summary="@string/rootmodesummary"
            android:title="@string/rootmode" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/about">
        <Preference
            android:key="about"
            android:title="@string/aboutFileManager"
            />
        <Preference
            android:key="feedback"
            android:title="@string/feedback" />
    </PreferenceCategory>
</PreferenceScreen>
