<!--
    Copyright (C) 2014 Arpit Khurana <arpitkh96@gmail.com>, Vishal Nehra <vishalmeham2@gmail.com>

    This file is part of Amaze File Manager.

    Amaze File Manager is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
    -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/openmulti"
        android:title="@string/select_intent"
        android:visible="false"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/cpy"
        android:title="@string/copy"
        android:icon="@drawable/ic_content_copy_white_36dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete_white_36dp"
        app:showAsAction="always" />

    <item
        android:id="@+id/openparent"
        android:visible="false"
        android:title="@string/openparent" />
    <item
        android:id="@+id/cut"
        android:title="@string/cut"
        android:icon="@drawable/ic_content_cut_white_36dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/all"
        android:title="@string/selectall"
        android:icon="@drawable/ic_select_all_white_36dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/about"
        android:title="@string/properties"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/rename"
        android:title="@string/rename" />
    <item
        android:id="@+id/sethome"
        android:title="@string/setashome" />
    <item
        android:id="@+id/share"
        android:title="@string/share" />
    <item
        android:id="@+id/book"
        android:title="@string/addtobook" />
    <item
        android:id="@+id/ex"
        android:title="@string/extract" />
    <item
        android:id="@+id/compress"
        android:title="@string/compress" />
    <item
        android:id="@+id/openwith"
        android:title="@string/openwith" />
    <item
        android:id="@+id/permissions"
        android:title="@string/permission" />
    <item
        android:id="@+id/hide"
        android:title="@string/hide" />
    <item
        android:id="@+id/addshortcut"
        android:title="@string/addshortcut" />
</menu>
